Skip to content; maintenance mode

--- a/site/plugins/languages/vars/en.yml
+++ b/site/plugins/languages/vars/en.yml
@@ -2,3 +2,4 @@ theme.admin.editpage: Edit page
 theme.admin.panel: Panel
 theme.admin.logout: Log out
 theme.admin.rawfields: Raw fields
+theme.skiptocontent: Skip to content
