--- a/site/plugins/languages/vars/ro.yml
+++ b/site/plugins/languages/vars/ro.yml
@@ -2,3 +2,4 @@ theme.admin.editpage: Editează pagina
 theme.admin.admin: Panou admin
 theme.admin.logout: Deloghează-te
 theme.admin.rawfields: Câmpuri brute
+theme.skiptocontent: Sari la conținut
